gnomad-browser/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnomad-ingress
  labels:
    environment: demo
spec:
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /reads
            pathType: ImplementationSpecific
            backend:
              service:
                name: reads-bluegreen-active-prod
                port:
                  number: 80
          - path: /reads/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reads-bluegreen-active-prod
                port:
                  number: 80
          - pathType: ImplementationSpecific
            backend:
              service:
                name: gnomad-browser
                port:
                  number: 80
